feat: update CSV export methods and refine application properties for better configuration